--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -3,16 +3,54 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>INICIO</ion-title>
+    <ion-title>Menú</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" >
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Inicio</ion-title>
-      
     </ion-toolbar>
   </ion-header>
-  <h1>Hola Mundo</h1>
+  <ion-content class="ion-padding" >
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Iniciar Sesión</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input type="email" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" required></ion-input>
+        </ion-item>
+
+        <ion-button expand="block" type="submit">
+          Iniciar Sesión
+        </ion-button>
+
+        <ion-button expand="block" color="secondary" fill="outline">
+          Ingresar como Invitado
+        </ion-button>
+
+        <div class="ion-text-center">
+          <ion-text>
+            <a href="#">¿Olvidaste tu contraseña?</a>
+          </ion-text>
+        </div>
+
+        <div class="ion-text-center">
+          <ion-text>
+            <a href="#">Crear una cuenta nueva</a>
+          </ion-text>
+        </div>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+  
 </ion-content>
+
+
