--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -12,10 +12,10 @@
     <ion-toolbar>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding" >
+  <ion-content class="ion-padding">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Iniciar Sesión</ion-card-title>
+        <ion-card-title style="color:black;">Iniciar Sesión</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <ion-item>
@@ -32,7 +32,7 @@
           Iniciar Sesión
         </ion-button>
 
-        <ion-button expand="block" color="secondary" fill="outline">
+        <ion-button expand="block" color="secondary" fill="outline" (click)="IrAInvitado()">
           Ingresar como Invitado
         </ion-button>
 
@@ -50,7 +50,5 @@
       </ion-card-content>
     </ion-card>
   </ion-content>
-  
+
 </ion-content>
-
-
