--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,23 @@
-<ion-app>
-  <ion-menu content-id="main-content">
-    <ion-header>
-      <ion-toolbar color="primary">
-        <ion-title>Menú</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-item routerLink="/home">
-          <ion-icon slot="start" name="home-outline"></ion-icon>
-          <ion-label>Inicio</ion-label>
-        </ion-item>
-        <ion-item routerLink="/about">
-          <ion-icon slot="start" name="information-circle-outline"></ion-icon>
-          <ion-label>Acerca de</ion-label>
-        </ion-item>
-        <ion-item routerLink="/contact">
-          <ion-icon slot="start" name="mail-outline"></ion-icon>
-          <ion-label>Contacto</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-  
-  <ion-router-outlet id="main-content"></ion-router-outlet>
-</ion-app>
+<ion-menu content-id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item routerLink="/home">
+        <ion-icon name="home" slot="start"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </ion-item>
+      <ion-item routerLink="/profile">
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </ion-item>
+      <!-- Agrega más elementos del menú según tus necesidades -->
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<!-- Contenido principal -->
+<ion-router-outlet id="main-content"></ion-router-outlet>
